--- a/src/main/resources/templates/driverItem.html
+++ b/src/main/resources/templates/driverItem.html
@@ -218,7 +218,7 @@
             blockSize: 1024 * 1024 * 10,
             completed: function () {
                 $(btn).button('reset');
-                window.location.reload();
+                //window.location.reload();
             }
         });
 
