--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="token" content="1111111111111">
     <title>个人文件管理</title>
     <link rel="stylesheet" th:href="@{/static/bootstrap/css/bootstrap.css}">
     <style type="text/css">
