--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <head>
     <meta charset="UTF-8">
-    <title>表格</title>
+    <title>文件管理</title>
 
     <link rel="stylesheet" th:href="@{/static/bootstrap/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/static/bootstrap-table/bootstrap-table.min.css}">
@@ -21,6 +21,7 @@
  -->
 <div class="container">
     <div class="col-sm-12">
+        <button type="button" class="btn btn-default" onclick="logout()">退出</button>
         <div class="well well-sm">
             <!--显示一些信息-->
             <span id="tipMessage">look me !!!</span>
@@ -466,6 +467,11 @@
                 alert(responseText.message);
             }
         });
+    }
+
+    function logout() {
+        localStorage.setItem("token", "");
+        AjaxUtil.jumpPageWithToken("/login");
     }
 
 </script>
