--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -19,15 +19,13 @@
  col-md (≥992px)
  col-lg (≥1200px)
  -->
-<div class="container">
-    <div class="col-sm-12">
-        <button type="button" class="btn btn-default" onclick="logout()">退出</button>
-        <div class="well well-sm">
-            <!--显示一些信息-->
-            <span id="tipMessage">look me !!!</span>
+<div class="container" style="position: relative">
+    <div style="position: absolute; width: 100%;padding-right: 15px;padding-left: 15px;margin-right: auto;margin-left: auto;z-index: 9999;">
+        <div class="col-sm-12" style="background: gainsboro; padding: 5px 10px;">
+            <button type="button" class="btn btn-default" onclick="logout()" >登&nbsp;&nbsp;出</button>
         </div>
     </div>
-    <div id="toolbar">
+    <div id="toolbar" style="margin: 65px 0">
         <div class="col-md-3">
             <div class="input-group">
                 <select class="form-control" id="driverRoot" aria-label="加载磁盘"></select>
